--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=prak_ppl
-DB_USERNAME=yusfi
-DB_PASSWORD=qazplm123
+DB_USERNAME=oxtar
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
